@@ -207,6 +207,8 @@ do { \
 } while(0)
 #endif /* CONFIG_SMP */
 
+#if defined(CONFIG_ADEOS_THREADS) || !defined(CONFIG_ADEOS_NOTHREADS)
+
 /* Since real-time interrupt handlers are called on behalf of the RTAI
    domain stack, we cannot infere the "current" Linux task address
    using %esp. We must use the suspended Linux domain's stack pointer
@@ -227,6 +229,18 @@ static inline struct task_struct *rthal_get_current (int cpuid)
 
     return current;
 }
+
+#else /* !(CONFIG_ADEOS_THREADS || !CONFIG_ADEOS_NOTHREADS) */
+
+static inline struct task_struct *rthal_get_root_current (int cpuid) {
+    return current;
+}
+
+static inline struct task_struct *rthal_get_current (int cpuid) {
+    return current;
+}
+
+#endif /* CONFIG_ADEOS_THREADS || !CONFIG_ADEOS_NOTHREADS */
 
 static inline void rthal_set_timer_shot (unsigned long delay) {
 
